# kioto

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  flake.nix
crates/base_gpui/: Cargo.toml
crates/base_gpui/src/: lib.rs  main.rs
crates/base_gpui/src/accordion/: actions.rs  child.rs  child_wiring.rs  context.rs  mod.rs  props.rs  runtime.rs  style_state.rs
crates/base_gpui/src/alert_dialog/: actions.rs  handle.rs  mod.rs
crates/base_gpui/src/api/: mod.rs
crates/base_gpui/src/autocomplete/: child.rs  mod.rs
crates/base_gpui/src/avatar/: child.rs  child_wiring.rs  context.rs  mod.rs  runtime.rs  style_state.rs
crates/base_gpui/src/button/: actions.rs  mod.rs  style_state.rs
crates/base_gpui/src/checkbox/: AGENTS.md  actions.rs  child.rs  child_wiring.rs  context.rs  mod.rs  props.rs  render_state.rs  runtime.rs  style_state.rs
crates/base_gpui/src/checkbox_group/: actions.rs  child.rs  child_wiring.rs  context.rs  mod.rs  props.rs  render_state.rs  runtime.rs  style_state.rs
crates/base_gpui/src/collapsible/: actions.rs  child.rs  child_wiring.rs  context.rs  mod.rs  props.rs  runtime.rs  style_state.rs
crates/base_gpui/src/combobox/: actions.rs  child.rs  child_wiring.rs  context.rs  mod.rs  props.rs  runtime.rs  style_state.rs
crates/base_gpui/src/context_menu/: mod.rs  style_state.rs
crates/base_gpui/src/dialog/: actions.rs  child.rs  child_wiring.rs  context.rs  mod.rs  props.rs  runtime.rs  style_state.rs
crates/base_gpui/src/drawer/: child.rs  child_wiring.rs  context.rs  mod.rs  props.rs  provider.rs  runtime.rs  style_state.rs
crates/base_gpui/src/field/: child.rs  child_wiring.rs  context.rs  item_context.rs  mod.rs  props.rs  render_state.rs  runtime.rs  style_state.rs  validation.rs
crates/base_gpui/src/fieldset/: child.rs  child_wiring.rs  context.rs  mod.rs  props.rs  render_state.rs  runtime.rs  style_state.rs
crates/base_gpui/src/form/: actions.rs  context.rs  mod.rs  props.rs  render_state.rs  runtime.rs  style_state.rs  submit.rs  value.rs
crates/base_gpui/src/input/: mod.rs  render_state.rs  style_state.rs
crates/base_gpui/src/menu/: actions.rs  child.rs  child_wiring.rs  context.rs  mod.rs  (+3 more)
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  buffer.rs  buffer.test.rs  display_map.rs  display_map.test.rs  editor.rs  element.rs  highlights.rs  highlights.test.rs  history.rs  history.test.rs  input.rs  lib.rs  position_map.rs  selection.rs  style.rs
(+981 files in other folders)
