[workspace]
resolver = "3"
members = [
  "crates/base_gpui",
  "crates/kioto",
  "crates/ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

[workspace.lints.clippy]
pub_with_shorthand = "deny"

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed" }
