[package]
name = "base_gpui"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "base_gpui"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
unicode-segmentation = "1"

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
