[package]
name = "editor"
version.workspace = true
edition.workspace = true

[dependencies]
comemo = "0.5"
gpui.workspace = true
image = "0.25"
smallvec = "1"
thiserror = "2"
typst = "0.15.0"
typst-assets = { version = "0.15.0", features = ["fonts"] }
typst-layout = "0.15.0"
typst-render = "0.15.0"
typst-syntax = "0.15.0"
unicode-segmentation = "1.12"

[lints]
workspace = true
